--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
                     <div class="product-item">
                         <img src="img/trip1.jpg" width="100%">
                         <div class="product-detail">
-                            <h3>BANFF NATIONAL PARK</h3>
+                            <h3>Săn Mây Thành Phố Đà Lạt 3ngày 2đêm</h3>
                             <span class="product-price">
-                                $546.00
+                                2.000.000 VNĐ
                             </span>
                             <button class="btn-product btn">Book this tour</button>
                         </div>
@@ -64,9 +64,20 @@
                     <div class="product-item">
                         <img src="img/trip2.jpg" width="100%">
                         <div class="product-detail">
-                            <h3>BANFF NATIONAL PARK</h3>
+                            <h3>Hà Giang Camping 3ngày 2đêm</h3>
                             <span class="product-price">
-                                $546.00
+                                3.000.000 VNĐ
+                            </span>
+                            <button class="btn-product btn">Book this tour</button>
+                        </div>
+                    </div>
+
+                    <div class="product-item">
+                        <img src="img/trip3.jpg" width="100%">
+                        <div class="product-detail">
+                            <h3>Bãi Nước Ngọt - Ninh Thuận Camping 2ngày 1đêm</h3>
+                            <span class="product-price">
+                                1.500.000 VNĐ
                             </span>
                             <button class="btn-product btn">Book this tour</button>
                         </div>
@@ -87,7 +98,10 @@
         </section>
 
         <footer>
-            <p>© 2021 Qode Interactive, All Rights Reserved</p>
+            <p>Địa chỉ: 128 Ngô Gia Tự, TP.PR-TC,
+            Tỉnh Ninh Thuận</p>
+            <p>Hotline1: 0912344567</p>
+            <p>Hotline2: 0987654123</p>
             <form>
                 <input required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" type="text" placeholder="Email Address">
                 <button class="btn btn-ft">Send</button>
