--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 
         <nav>
             <ul>
-                <li><a class="active" href="">Home</a></li>
-                <li><a class="active" href="">Pages</a></li>
-                <li><a class="active" href="">Destinations</a></li>
-                <li><a class="active" href="">Blog</a></li>
-                <li><a class="active" href="">Shop</a></li>
+                <li><a  href="">Home</a></li>
+                <li><a  href="">Pages</a></li>
+                <li><a  href="">Destinations</a></li>
+                <li><a  href="">Blog</a></li>
+                <li><a  href="">Shop</a></li>
             </ul>
         </nav>
 
@@ -47,7 +47,7 @@
             </div>
 
             <div class="product">
-                <h2>FEATURED BLOG POSTS</h2>
+                <h4>CÁC TOUR ĐANG THỊNH HÀNH</h2>
 
                 <div class="product-list">
                     <div class="product-item">
